Fix scroll on mobile. Fix button colors

--- a/src/client/pages/home-page/components/SectionElement/styles.module.scss
+++ b/src/client/pages/home-page/components/SectionElement/styles.module.scss
@@ -33,6 +33,7 @@
   cursor: pointer;
   position: relative;
   top: 100px;
+  color: #000;
 }
 
 @media screen and (max-width: 768px) {
@@ -51,9 +52,10 @@
   }
 
   .btnWaitlist {
-    top: -50%;
     max-width: 100%;
     font-size: 18px;
+    top: auto;
+    bottom: 50px;
   }
 
   .infoBlock {
