--- a/src/client/pages/home-page/styles.module.scss
+++ b/src/client/pages/home-page/styles.module.scss
@@ -10,6 +10,10 @@
   }
 }
 
+.section1 {
+  height: 90vh;
+}
+
 .containerAnimation {
   position: fixed;
   z-index: -2;
@@ -144,6 +148,11 @@
   display: grid;
   place-content: center flex-start;
   height: 100vh;
+
+
+  @media (max-width: 768px) {
+    height: 80vh;
+  }
 }
 
 .companyTitle {
@@ -190,6 +199,7 @@
   font-weight: 500;
   background-color: transparent;
   cursor: default;
+  color: #000;
 }
 
 .description {
@@ -208,7 +218,7 @@
   min-height: 100vh;
 
   @media (max-width: 768px) {
-    place-content: flex-end;
+    min-height: 80vh;
   }
 }
 
@@ -450,7 +460,7 @@
 // }
 
 .ourTeamContainer {
-  display: grid; 
+  display: grid;
   place-content: center;
   min-height: 100vh;
 
@@ -661,10 +671,11 @@
     place-content: space-between;
   }
 
+
   .companyTitle {
     font-size: 25px;
     position: relative;
-    top: 70px;
+    top: 100px;
   }
 
   .infoSection {
@@ -708,7 +719,7 @@
   .assetsWeb3Mobile {
     display: block;
     margin: 0 auto 15px;
-    max-height: calc(100vh - 50vw);
+    max-height: calc(100vh - 200px);
   }
 
   .assetsWeb3Desktop {
